# ha-google-outlook-contacts-sync

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: hacs.yaml  hassfest.yaml  lint.yaml  test.yaml
custom_components/google_outlook_contacts_sync/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  http.py  manifest.json  sensor.py  services.yaml  store.py  strings.json
custom_components/google_outlook_contacts_sync/auth/: __init__.py  google_auth.py  ms_auth.py
custom_components/google_outlook_contacts_sync/sync/: dedup.py  engine.py  google_client.py  graph_client.py  mapping.py
custom_components/google_outlook_contacts_sync/translations/: de.json  en.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_dedup.py  test_engine.py  test_mapping.py
tests/fixtures/: google_person_deleted.json  google_person_full.json  google_person_no_year_birthday.json
